docs/v0.2.0a139/_sources/reference/_autosummary/hpcflow.sdk.persistence.zarr.ZarrStoreEAR.rst.txt
hpcflow.sdk.persistence.zarr.ZarrStoreEAR
=========================================

.. currentmodule:: hpcflow.sdk.persistence.zarr

.. autoclass:: ZarrStoreEAR
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ZarrStoreEAR.decode
      ~ZarrStoreEAR.encode
      ~ZarrStoreEAR.to_dict
      ~ZarrStoreEAR.update
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ZarrStoreEAR.end_time
      ~ZarrStoreEAR.exit_code
      ~ZarrStoreEAR.metadata
      ~ZarrStoreEAR.skip
      ~ZarrStoreEAR.snapshot_end
      ~ZarrStoreEAR.snapshot_start
      ~ZarrStoreEAR.start_time
      ~ZarrStoreEAR.submission_idx
      ~ZarrStoreEAR.success
      ~ZarrStoreEAR.id_
      ~ZarrStoreEAR.is_pending
      ~ZarrStoreEAR.elem_iter_ID
      ~ZarrStoreEAR.action_idx
      ~ZarrStoreEAR.data_idx
   
   